# libcitygml2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
generator/: .gitignore  README.md  requirements.txt  runGenerator.bat
generator/generator/: NamespaceParser.py  SchemaParser.py  Types.py  __main__.py
src/: CMakeLists.txt
test/: CMakeLists.txt  testsMain.cpp
